--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -17,7 +17,7 @@
                         <li>
                             <a href="#">Links</a>
                             <ul>
-                                <li><a href=" https://wa.me/9778073408" target="_blank"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
+                                <li><a href=" https://wa.me/9778073408" target="_blank"><i class="icon-phone"></i>Chatt: +91 9778073408</a></li>
                                 <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist</a></li>
                                 <li><a href="/about">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
@@ -53,7 +53,7 @@
                                 <a href="/all-products">Shop</a>
                             </li>
                             <li>
-                                <a href="" >Product</a>
+                                <a href="/allCategories" >Product</a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="sf-with-ul">Pages</a>
