--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -27,7 +27,7 @@
                                         <div class="col-auto">
                                             <label class="sr-only" for="filterOption">Filter Option</label>
                                             <select class="form-control" id="filterOption" name="filterOption" onchange="applyFilter()">
-                                                <!-- <option value="All">All</option> -->
+                                                <option value="All">All</option>
                                                 <option value="day">Today</option>
                                                 <option value="week">This Week</option>
                                                 <option value="month">This Month</option>
