--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -121,7 +121,7 @@
                                         </tr><!-- End .summary-shipping-estimate -->
                                         <% if(cartProducts[0].coupon){ %>
                                         <tr>
-                                            <td><span class="text-primary"><%= cartProducts[0].coupon.couponName  %></span> couponAppied</td>
+                                            <td><span class="text-primary"><%= cartProducts[0].coupon.couponName  %></span> Coupon Applied</td>
                                         </tr>
                                         <% } %>
                                         <tr class="summary-total">
