--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -75,9 +75,9 @@
                                                 </div><!-- End .product-action-vertical -->
                                                 
                                                 <% if(product.quantity !== 0) { %> 
-                                                <div class="product-action">
-                                                    <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
-                                                </div><!-- End .product-action -->
+                                                    <div class="product-action">
+                                                        <button class="btn-product btn-cart" style="border: none;" onclick="addToCart('<%= product._id %>')"><span>add to cart</span> </button>
+                                                    </div><!-- End .product-action -->
                                                 <% } %>
                                             <% } else { %>
                                                 <p>This product is not available</p>
@@ -250,8 +250,42 @@
     });
 
 </script>
-
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+    function addToCart(productId) {
+        console.log("Inside addToCart function");
+        fetch(`/cart-Products/${productId}`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+        })
+        .then(response => {
+            console.log("Response status:", response.status);
+            if (response.ok) {
+                return response.json();
+            }
+            throw new Error('Network response was not ok.');
+        })
+        .then(data => {
+            console.log("Data received from server:", data);
+            // Handle success message
+            if (data && data.message) {
+                Swal.fire({
+                title: "Good job!",
+                text: data.message,
+                icon: "success"
+                }).then(() => {
+                    // Redirect to the same page
+                    window.location.href = window.location.href;
+                });
+            }
+        })
+        .catch(error => {
+            console.error('There was a problem with the fetch operation:', error);
+        });
+    }
+</script>
   
 
  <!-- Plugins JS File -->
