--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -87,6 +87,31 @@
                         <% }else { %>
                             <h6 style="margin-bottom: 10px;">Balance: ₹0.00</h6>
                         <% } %>
+
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination justify-content-center">
+                                <% if (currentPage > 1) { %>
+                                    <li class="page-item ">
+                                        <a class="page-link page-link-prev" href="?page=<%= currentPage - 1 %>" aria-label="Previous"  aria-disabled="true">
+                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
+                                        </a>
+                                    </li>
+                                <% } %>
+                                <% for (let i = 1 ; i<= totalPages; i++) { %>
+                                    <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                        <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                                    </li>
+                                <% } %>
+                                <% if (currentPage < totalPages) { %>
+                                    <li class="page-item">
+                                        <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next" >
+                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
+                                        </a>
+                                    </li>
+                                <% } %>
+                            </ul>
+                        </nav>
+
                     </div>
                     
                     </div>
