--- a/views/users/orderdetails.ejs
+++ b/views/users/orderdetails.ejs
@@ -1,7 +1,100 @@
 <%- include('../layout/header.ejs') %>
 
 <%- include('../layout/navbar.ejs') %>
+<style>
+   .hh-grayBox {
+    background-color: #F8F8F8;
+    margin-bottom: 20px;
+    padding: 35px;
+    margin-top: 20px;
+    }
+    .pt45 { padding-top: 45px; }
+    .order-tracking {
+        text-align: center;
+        width: 33.33%;
+        position: relative;
+        display: block;
+    }
+    .order-tracking .is-complete {
+        display: block;
+        position: relative;
+        border-radius: 50%;
+        height: 30px;
+        width: 30px;
+        border: 0px solid #AFAFAF;
+        background-color: #f7be16;
+        margin: 0 auto;
+        transition: background 0.25s linear;
+        -webkit-transition: background 0.25s linear;
+        z-index: 2;
+    }
+    .order-tracking .is-complete:after {
+        display: block;
+        position: absolute;
+        content: '';
+        height: 14px;
+        width: 7px;
+        top: -2px;
+        bottom: 0;
+        left: 5px;
+        margin: auto 0;
+        border: 0px solid #AFAFAF;
+        border-width: 0px 2px 2px 0;
+        transform: rotate(45deg);
+        opacity: 0;
+    }
+    .order-tracking.completed .is-complete { 
+        border-color: #27aa80;
+        border-width: 0px;
+        background-color: #27aa80;
+    }
+    .order-tracking.completed .is-complete:after {
+        border-color: #fff;
+        border-width: 0px 3px 3px 0;
+        width: 7px;
+        left: 11px;
+        opacity: 1;
+    }
+    .order-tracking.cancelled .is-complete {
+        border-color: #ff0606;
+        border-width: 0px;
+        background-color: #df0707;
+    }
 
+    .order-tracking p {
+        color: #A4A4A4;
+        font-size: 16px;
+        margin-top: 8px;
+        margin-bottom: 0;
+        line-height: 20px;
+    }
+    .order-tracking p span { font-size: 14px; }
+    .order-tracking.completed p { color: #000; }
+    .order-tracking::before {
+        content: '';
+        display: block;
+        height: 3px;
+        width: calc(100% - 40px);
+        background-color: #f7be16;
+        top: 13px;
+        position: absolute;
+        left: calc(-50% + 20px);
+        z-index: 0;
+    }
+    .order-tracking:first-child:before { display: none; }
+    .order-tracking.completed:before { background-color: #27aa80; }
+    .order-tracking.cancelled:before { background-color: #ff0606;}
+    .order-tracking.completed .is-complete {
+        background-color: green; /* Adjust this color as needed */
+    }
+    .order-tracking.cancelled .is-complete {
+        background-color: red; /* Adjust this color as needed */
+    }
+    .order-tracking.cancelled p {
+        color: red;
+    }
+
+</style>
 
 <main class="main">
     <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
@@ -87,7 +180,44 @@
                                             </h6>
                                         </div>
                                         </div>
+
+                                        
+
                                     </div>
+                                    <div class="container w-100">
+                                        <div class="row">
+                                            <div class="w-100 hh-grayBox pt45 pb20">
+                                                <div class="row justify-content-center">
+                                                    <% if (myorder.products[i].orderStatus !== 'cancelled' && myorder.products[i].orderStatus !== 'returned') { %> 
+                                                        <div class="order-tracking <%= ['placed', 'ordered', 'shipped', 'delivered'].includes(myorder.products[i].orderStatus) ? 'completed' : '' %>">
+                                                            <span class="is-complete"></span>
+                                                            <p>Ordered<br></p>
+                                                        </div>
+                                                        <div class="order-tracking <%= ['shipped', 'delivered'].includes(myorder.products[i].orderStatus) ? 'completed' : '' %>">
+                                                            <span class="is-complete"></span>
+                                                            <p>Shipped<br></p>
+                                                        </div>
+                                                        <div class="order-tracking <%= myorder.products[i].orderStatus === 'delivered' ? 'completed' : '' %>">
+                                                            <span class="is-complete"></span>
+                                                            <p>Delivered<br></p>
+                                                        </div>
+                                                    <% } else { %> 
+                                                        <div class="order-tracking cancelled completed">
+                                                            <span class="is-complete"></span>
+                                                            <p>Ordered<br></p>
+                                                        </div>
+                                                        <div class="order-tracking cancelled completed">
+                                                            <span class="is-complete"></span>
+                                                            <p><%= myorder.products[i].orderStatus.charAt(0).toUpperCase() + myorder.products[i].orderStatus.slice(1) %><br></p>
+                                                        </div>
+                                                    <% } %>
+                                                </div>
+                                            </div>
+                                        </div>
+                                                          
+                                      </div>
+                                    
+
                                     <% if( myorder.products[i].orderStatus === 'delivered'){%> 
                                         <button onclick="generatePDF(this)" class="btn btn-info" data-order="<%= JSON.stringify(myorder) %>">Invoice</button>  
                                     <% } %>
