--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -27,6 +27,7 @@
                                         <div class="col-auto">
                                             <label class="sr-only" for="filterOption">Filter Option</label>
                                             <select class="form-control" id="filterOption" name="filterOption" onchange="applyFilter()">
+                                                <option value="">Select</option>
                                                 <option value="All">All</option>
                                                 <option value="day">Today</option>
                                                 <option value="week">This Week</option>
@@ -145,6 +146,32 @@
                             </div>
                             </div>
                         </div>
+
+                        <!-- Pagination -->
+                    <nav aria-label="Page navigation ">
+                        <ul class="pagination justify-content-center mt-4">
+                            <% if (currentPage > 1) { %>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page=<%= currentPage - 1 %>" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li> 
+                            <% } %>
+                            <% for (let i = 1; i <= totalPages; i++) { %> 
+                                <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                    <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                                </li>
+                            <% } %>
+                            <% if (currentPage < totalPages) { %>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page=<%= currentPage + 1 %>" aria-label="Next">
+                                        <span aria-label="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            <% } %>
+                        </ul>
+                    </nav>
+                    <!-- End Pagination -->
                 
                 </div>
         </div>
