complte category purchase

--- a/views/layout/mobile.ejs
+++ b/views/layout/mobile.ejs
@@ -17,23 +17,10 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="category.html">Shop</a>
+                    <a href="/all-products">Shop</a>
                 </li>
                 <li>
-                    <a href="product.html" class="sf-with-ul">Product</a>
-                </li>
-                <li>
-                    <a href="#">Pages</a>
-                    <ul>
-                        <li>
-                            <a href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>
-                        
-                        <!-- <li><a href="404.html">Error 404</a></li> -->
-                    </ul>
+                    <a href="/allCategories" class="sf-with-ul">Product</a>
                 </li>
             </ul>
         </nav><!-- End .mobile-nav -->
