--- a/views/users/allCategory.ejs
+++ b/views/users/allCategory.ejs
@@ -5,7 +5,7 @@
 <main class="main">
     <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
         <div class="container">
-            <h1 class="page-title">Product Category <span>Shop</span></h1>
+            <h1 class="page-title">Product Category</h1>
         </div><!-- End .container -->
     </div><!-- End .page-header -->
     <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
@@ -24,24 +24,24 @@
                     <div class="col-md-6">
                         <div class="banner banner-cat banner-badge">
                             <a href="#">
-                                <img src="assets/images/category/boxed/banner-1.jpg" alt="Banner">
+                                <img src="assets/images/banners/banner-1.webp" alt="Banner">
                             </a>
 
-                            <a class="banner-link" href="#">
-                                <h3 class="banner-title">Dresses</h3><!-- End .banner-title -->
-                                <h4 class="banner-subtitle">3 Products</h4><!-- End .banner-subtitle -->
+                            <a class="banner-link" href="/all-products/?a=65dda3e448d65827a9b90a04">
+                                <h3 class="banner-title">Armchair</h3><!-- End .banner-title -->
+                                <!-- <h4 class="banner-subtitle">2Products</h4>End .banner-subtitle -->
                                 <span class="banner-link-text">Shop Now</span>
                             </a><!-- End .banner-link -->
                         </div><!-- End .banner -->
 
                         <div class="banner banner-cat banner-badge">
                             <a href="#">
-                                <img src="assets/images/category/boxed/banner-2.jpg" alt="Banner">
+                                <img src="assets/images/banners/bean bag.jpg" alt="Banner">
                             </a>
 
-                            <a class="banner-link" href="#">
-                                <h3 class="banner-title">Jackets</h3><!-- End .banner-title -->
-                                <h4 class="banner-subtitle">2 Products</h4><!-- End .banner-subtitle -->
+                            <a class="banner-link" href="/all-products?a=65e081b356a68498179cece9">
+                                <h3 class="banner-title">Bean Bag</h3><!-- End .banner-title -->
+                                <!-- <h4 class="banner-subtitle">2 Products</h4>End .banner-subtitle -->
                                 <span class="banner-link-text">Shop Now</span>
                             </a><!-- End .banner-link -->
                         </div><!-- End .banner -->
@@ -52,12 +52,12 @@
                             <div class="col-sm-6">
                                 <div class="banner banner-cat banner-badge">
                                     <a href="#">
-                                        <img src="assets/images/category/boxed/banner-3.jpg" alt="Banner">
+                                        <img src="/assets/images/banners/ottomon.jpg" alt="Banner">
                                     </a>
 
-                                    <a class="banner-link" href="#">
-                                        <h3 class="banner-title">T-shirts</h3><!-- End .banner-title -->
-                                        <h4 class="banner-subtitle">0 Products</h4><!-- End .banner-subtitle -->
+                                    <a class="banner-link" href="/all-products?a=65e9d7982aa56a7d9d744f9e">
+                                        <h3 class="banner-title">Stool</h3><!-- End .banner-title -->
+                                        <!-- <h4 class="banner-subtitle">0 Products</h4>End .banner-subtitle -->
                                         <span class="banner-link-text">Shop Now</span>
                                     </a><!-- End .banner-link -->
                                 </div><!-- End .banner -->
@@ -66,12 +66,12 @@
                             <div class="col-sm-6">
                                 <div class="banner banner-cat banner-badge">
                                     <a href="#">
-                                        <img src="assets/images/category/boxed/banner-4.jpg" alt="Banner">
+                                        <img src="assets/images/banners/woodenchair.jpg" alt="Banner">
                                     </a>
 
-                                    <a class="banner-link" href="#">
-                                        <h3 class="banner-title">Jeans</h3><!-- End .banner-title -->
-                                        <h4 class="banner-subtitle">1 Products</h4><!-- End .banner-subtitle -->
+                                    <a class="banner-link" href="/all-products/?a=65e5aa129c5280a8d0604377">
+                                        <h3 class="banner-title">Wooden Chair</h3><!-- End .banner-title -->
+                                        <!-- <h4 class="banner-subtitle">1 Products</h4>End .banner-subtitle -->
                                         <span class="banner-link-text">Shop Now</span>
                                     </a><!-- End .banner-link -->
                                 </div><!-- End .banner -->
@@ -80,12 +80,12 @@
 
                         <div class="banner banner-cat banner-badge">
                             <a href="#">
-                                <img src="assets/images/category/boxed/banner-5.jpg" alt="Banner">
+                                <img src="assets/images/banners/banner-4.jpeg" alt="Banner">
                             </a>
 
-                            <a class="banner-link" href="#">
-                                <h3 class="banner-title">Bags</h3><!-- End .banner-title -->
-                                <h4 class="banner-subtitle">4 Products</h4><!-- End .banner-subtitle -->
+                            <a class="banner-link" href="/all-products/?a=65e5a9529c5280a8d0604373">
+                                <h3 class="banner-title">Desk Chair</h3><!-- End .banner-title -->
+                                <!-- <h4 class="banner-subtitle">4 Products</h4>End .banner-subtitle -->
                                 <span class="banner-link-text">Shop Now</span>
                             </a><!-- End .banner-link -->
                         </div><!-- End .banner -->
@@ -98,7 +98,7 @@
             </div><!-- End .container -->
         </div><!-- End .categories-page -->
         
-        <div class="sidebar-filter-overlay"></div><!-- End .sidebar-filter-overlay -->
+        <!-- <div class="sidebar-filter-overlay"></div> End .sidebar-filter-overlay 
         <aside class="sidebar-shop sidebar-filter sidebar-filter-banner">
             <div class="sidebar-filter-wrapper">
                 <div class="widget widget-clean">
@@ -108,7 +108,7 @@
                 <div class="widget">
                     <h3 class="widget-title">
                         Browse Category
-                    </h3><!-- End .widget-title -->
+                    </h3> End .widget-title 
 
                     <div class="widget-body">
                         <div class="filter-items filter-items-count">
@@ -116,120 +116,120 @@
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-1">
                                     <label class="custom-control-label" for="cat-1">Women</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">3</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="filter-item">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-2">
                                     <label class="custom-control-label" for="cat-2">Men</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">0</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="filter-item">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-3">
                                     <label class="custom-control-label" for="cat-3">Holiday Shop</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">0</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="filter-item">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-4">
                                     <label class="custom-control-label" for="cat-4">Gifts</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">0</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="filter-item">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-5">
                                     <label class="custom-control-label" for="cat-5">Homeware</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">0</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="filter-item">
                                 <div class="custom-control custom-checkbox">
                                     <input type="checkbox" class="custom-control-input" id="cat-6" checked="checked">
                                     <label class="custom-control-label" for="cat-6">Grid Categories Fullwidth</label>
-                                </div><!-- End .custom-checkbox -->
+                                </div> End .custom-checkbox 
                                 <span class="item-count">13</span>
-                            </div><!-- End .filter-item -->
+                            </div> End .filter-item 
 
                             <div class="sub-filter-items">
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-7">
                                         <label class="custom-control-label" for="cat-7">Dresses</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">3</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-8">
                                         <label class="custom-control-label" for="cat-8">T-shirts</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">0</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-9">
                                         <label class="custom-control-label" for="cat-9">Bags</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">4</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-10">
                                         <label class="custom-control-label" for="cat-10">Jackets</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">2</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-11">
                                         <label class="custom-control-label" for="cat-11">Shoes</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">2</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-12">
                                         <label class="custom-control-label" for="cat-12">Jumpers</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">1</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-13">
                                         <label class="custom-control-label" for="cat-13">Jeans</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">1</span>
-                                </div><!-- End .filter-item -->
+                                </div> End .filter-item 
 
                                 <div class="filter-item">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="cat-14">
                                         <label class="custom-control-label" for="cat-14">Sportwear</label>
-                                    </div><!-- End .custom-checkbox -->
+                                    </div> End .custom-checkbox 
                                     <span class="item-count">0</span>
-                                </div><!-- End .filter-item -->
-                            </div><!-- End .sub-filter-items -->
-                        </div><!-- End .filter-items -->
-                    </div><!-- End .widget-body -->
-                </div><!-- End .widget -->
-            </div><!-- End .sidebar-filter-wrapper -->
-        </aside><!-- End .sidebar-filter -->
+                                </div> End .filter-item 
+                            </div> End .sub-filter-items 
+                        </div> End .filter-items 
+                    </div> End .widget-body 
+                </div> End .widget 
+            </div> End .sidebar-filter-wrapper 
+        </aside>End .sidebar-filter -->
     </div><!-- End .page-content -->
 </main><!-- End .main -->
 
