fix cart out of stock

--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -63,7 +63,7 @@
                                                 <% if(product.quantity === 0) { %> 
                                                     <span class="product-label label-out">Out of Stock</span>
                                                 <% }else if(product.offer && product.offer.status === true) { %> 
-                                                    <span class="product-label bg-danger label-new"><%= product.offer.name%> off <%= product.offer.discount %>%</span>    
+                                                    <span class="product-label bg-danger label-new">- <%= product.offer.discount %>%</span>    
                                                 <% } %>
                                                 <a href="/product/<%= product._id %>">
                                                     <img src="<%=product.pictures[0] %>" alt="Product image" class="product-image">
